# mindlink

./: .eslintrc.json  .gitignore  .repomixignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROLLBACK.md  TODO.md  browser-debug.js  clear-plugin-cache.js  eslint.config.js  index.html  install-cloudflared.sh  package-lock.json  package.json  repomix.config.json  tsconfig.json  vite.config.ts
.github/: CI-CD-ENFORCEMENT.md  CODEOWNERS  branch-protection.md
.github/workflows/: build.yml  check.yml  docs.yml  release.yml
.storybook/: main.ts  preview.tsx  tauri-mocks.ts
_meta/: baseline-lint.txt  baseline-typecheck.txt  baseline.json  cleanup-complete.json
assets/: mindlink.desktop
attic/: README.md  debug-plugins.html
bifrost-ui/: index.html
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: README.md  bifrost-build.config.sh  build-bifrost-for-tauri.sh  build-bifrost.sh  build-production.sh  generate-coverage.sh  generate-icons.sh  setup-code-signing.sh  setup-updater.sh  tauri-build-bifrost.sh  test-bifrost-build.sh  validate-ci-cd.sh
src/: App.css  App.tsx  README.md  index.css  main.js  vite-env.d.ts
src-tauri/: CI_INTEGRATION_SPEC.md  CODE_QUALITY_IMPROVEMENT_SUMMARY.md  COMPREHENSIVE_TEST_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DYNAMIC_TRAY_IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PRODUCTION_ERROR_HANDLING.md  TEST_ENHANCEMENT_SUMMARY.md  build.rs  deny.toml  rustfmt.toml  tarpaulin.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app.icns
src-tauri/src/: command_helpers.rs  dialog.rs  error.rs  error_reporter.rs  logging.rs  main.rs  process_monitor.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/managers/: auth_manager.rs  bifrost_manager.rs  binary_manager.rs  config_manager.rs  dashboard_manager.rs  mod.rs  server_manager.rs  tunnel_manager.rs
src-tauri/src/tests/: auth_manager_tests.rs  bifrost_integration_test.rs  bifrost_manager_tests.rs  comprehensive_integration_tests.rs  config_manager_tests.rs  e2e_api_tests.rs  e2e_command_tests.rs  e2e_component_tests.rs  e2e_simple_tests.rs  e2e_tests.rs  live_e2e_integration_tests.rs  local_llm_commands_tests.rs  login_and_serve_integration_test.rs  mod.rs  performance_stress_tests.rs  server_manager_tests.rs  tauri_commands_integration_test.rs  tunnel_manager_tests.rs
src-tauri/tests/: e2e_test_config.rs  run_e2e_tests.sh
src/auth/: authManager.js
src/bifrost/: bifrostManager.js
src/components/: APIInformation.css  APIInformation.tsx  App.stories.tsx  AppDetailsModal.css  AppDetailsModal.tsx  AppsCard.css  AppsCard.tsx  BifrostButton.css  BifrostButton.stories.tsx  BifrostButton.tsx  Dashboard.css  Dashboard.stories.tsx  Dashboard.tsx  NetworkStats.css  NetworkStats.stories.tsx  NetworkStats.tsx  OAuthModal.css  OAuthModal.stories.tsx  OAuthModal.tsx  OllamaConfigModal.css  OllamaConfigModal.tsx  ProvidersCard.css  ProvidersCard.tsx  QRCodeCard.css  QRCodeCard.stories.tsx  QRCodeCard.tsx  ServerControl.css  ServerControl.tsx  Settings.css  Settings.tsx  StatusBar.css  StatusBar.tsx  TunnelControl.css  TunnelControl.tsx  TunnelStatusHeader.css  TunnelStatusHeader.tsx  UnifiedNavigation.css  UnifiedNavigation.stories.tsx  UnifiedNavigation.tsx
src/components/shared/: Modal.css  ModalUtils.tsx
src/config/: configManager.js
src/design-system/: components.css  index.css  tokens.css
src/plugins/: README.md  base-plugin.ts  dynamic-loader.ts  index.ts  registry.ts  types.ts
src/plugins/providers/: anthropic.ts  google.ts  index.ts  ollama.ts  openai.ts
src/server/: serverManager.js
src/services/: bifrostService.ts
src/stories/: Button.tsx  Header.tsx  Page.tsx
src/stories/design-system/: Colors.stories.tsx  Introduction.stories.tsx  Typography.stories.tsx
src/tunnel/: tunnelManager.js
src/types/: api.ts
ui/: settings.html
